--- a/.gitignore
+++ b/.gitignore
@@ -21,13 +21,15 @@ Public/ToggleSprintDefinitiveEdition_4dbc489b-f5cb-40c2-bc9c-ac4f6fb20fad/Assets
 
 # Editor files       #
 ######################
+RootTemplateSelectorConfig_*
+ResourceSelectorConfig_*
 StatsEditorConfig.xml
 EffectEditorConfig.xml
 DockPanel.config
 EditorBrowserMetadata_*
 EditorBrowserMetadata.xml
-Autosave/
-Recovered/
+Autosave/*
+Recovered/*
 
 # Assets             #
 ######################
