--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ personallog.txt
 ehthumbs.db
 Thumbs.db
 *.lnk
+Mods/ToggleSprintDefinitiveEdition_4dbc489b-f5cb-40c2-bc9c-ac4f6fb20fad/Story/Dialogs/Autosave/ToggleSprint_SettingsMenu-AutoSave-s3ju2ngv.lsj
