--- a/Mods/ToggleSprintDefinitiveEdition_4dbc489b-f5cb-40c2-bc9c-ac4f6fb20fad/OsiToolsConfig.json
+++ b/Mods/ToggleSprintDefinitiveEdition_4dbc489b-f5cb-40c2-bc9c-ac4f6fb20fad/OsiToolsConfig.json
@@ -1,8 +1,9 @@
 {
-    "RequiredExtensionVersion": 49,
+    "RequiredExtensionVersion": 55,
     "ModTable": "ToggleSprint",
     "FeatureFlags": [
         "OsirisExtensions",
-        "Lua"
+        "Lua",
+        "Preprocessor"
     ]
 }
